added yet another print

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -397,6 +397,7 @@
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
     "            print(qubit_list[i])\n",
+    "            print(qubit_list)\n",
     "            circuit.x(qubit_list[i])\n",
     "\n",
     "    return circuit\n",
