--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -395,6 +395,7 @@
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
+    "            # test\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
     "            print(qubit_list[i])\n",
     "            print(qubit_list)\n",
