--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -393,12 +393,10 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
+    "    print(bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
-    "            # test\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            print(qubit_list[i])\n",
-    "            print(qubit_list)\n",
     "            circuit.x(qubit_list[i])\n",
     "\n",
     "    return circuit\n",
