--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -393,12 +393,11 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    # idk why i have to do this\n",
     "    print(bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            circuit.x(qubit_list[-i - 1])\n",
+    "            circuit.x(-i - 1)\n",
     "\n",
     "    return circuit\n",
     "\n",
