--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -393,11 +393,12 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
+    "    print(qubit_list.len())\n",
     "    print(bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            circuit.x(-i - 1)\n",
+    "            circuit.x(qubit_list.len() - 1)\n",
     "\n",
     "    return circuit\n",
     "\n",
