--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -399,7 +399,7 @@
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            circuit.x(qubit_list.len() - 1)\n",
+    "            circuit.x(qubit_list.len() - i - 1)\n",
     "\n",
     "    return circuit\n",
     "\n",
