--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    # extra commit for some reason\n",
+    "    # extra commit\n",
     "    print(qubit_list.len())\n",
     "    print(bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
