--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -393,7 +393,7 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    # extra commit\n",
+    "    # extra commit again\n",
     "    print(qubit_list.len())\n",
     "    print(bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
