--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "id": "f2de87c4-34fe-4ec9-9672-26324fde7e22",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            print(\"Applying Not to index: \" + str(i))\n",
-    "            circuit.x(qubit_list.len() - i - 1)\n",
+    "            circuit.x(i)\n",
     "\n",
     "    return circuit\n",
     "\n",
