88/92 not sure what im missing

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -393,13 +393,12 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    # extra commit again again\n",
-    "    print(qubit_list.len())\n",
-    "    print(bitstring)\n",
+    "    print(\"Priming a circuit\")\n",
+    "    print(\"Bitstring: \" + bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
-    "            print(\"Applying Not to index: \" + str(i))\n",
     "            circuit.x(qubit_list[i])\n",
+    "            print(\"Applying NOT to index: \" + str(i))\n",
     "\n",
     "    return circuit\n",
     "\n",
@@ -509,7 +508,7 @@
     "    circuit.h(0)\n",
     "\n",
     "    for i in range(1, n):\n",
-    "        circuit.cx(0, i)\n",
+    "        circuit.cx(i-1, i)\n",
     "    # End Code\n",
     "\n",
     "    return circuit\n",
