still missing some points

--- a/week7/Lab7-fixed.ipynb
+++ b/week7/Lab7-fixed.ipynb
@@ -326,6 +326,7 @@
     "\n",
     "def hw3_2_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    print(\"In hw3_2_response\")\n",
     "    simulator = QasmSimulator()\n",
     "\n",
     "    circuit.measure_all()\n",
@@ -393,24 +394,23 @@
     "from qiskit.providers.aer import QasmSimulator\n",
     "\n",
     "def prime_circuit(circuit, qubit_list, bitstring):\n",
-    "    print(\"Priming a circuit\")\n",
-    "    print(\"Bitstring: \" + bitstring)\n",
     "    for i in range(0,len(bitstring)):\n",
     "        if bitstring[i] == '1':\n",
     "            circuit.x(qubit_list[i])\n",
-    "            print(\"Applying NOT to index: \" + str(i))\n",
     "\n",
     "    return circuit\n",
     "\n",
     "def hw3_3_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    print(\"in hw3_3_response\")\n",
     "    simulator = QasmSimulator()\n",
     "\n",
     "    circuit.measure_all()\n",
     "\n",
-    "    executed_job = qiskit.execute(circuit, simulator, shots=1024)\n",
+    "    executed_job = qiskit.execute(circuit, simulator, shots=10000)\n",
     "    r = executed_job.result()\n",
     "    result_dict = r.get_counts(circuit)\n",
+    "    print(result_dict)\n",
     "\n",
     "    bitstrings = [\"000001\", \"000010\", \"000100\", \"001000\", \"010000\", \"100000\"]\n",
     "    qubit_1 = -1\n",
@@ -426,6 +426,7 @@
     "                qubit_2 = i\n",
     "\n",
     "    if qubit_1 != -1 and qubit_2 != -1:\n",
+    "        print(\"returning same entangle\")\n",
     "        return qubit_1, qubit_2\n",
     "\n",
     "    for i in range(0,5):\n",
@@ -433,6 +434,7 @@
     "            bitstring = \"000000\"\n",
     "            bitstring[i] == '1'\n",
     "            bitstring[j] == '1'\n",
+    "            print(bitstring)\n",
     "\n",
     "            if result_dict.get(bitstring) == None:\n",
     "                qubit_1 = j\n",
