--- a/week8/Lab8.ipynb
+++ b/week8/Lab8.ipynb
@@ -60,18 +60,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b3547fb9-1733-43a7-86d0-fb146bf0ded6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">                     ┌───┐   \n",
+       "q3_0: ────────────■──┤ H ├─■─\n",
+       "      ┌───┐     ┌─┴─┐└───┘ │ \n",
+       "q3_1: ┤ H ├──■──┤ X ├──■───┼─\n",
+       "      └───┘┌─┴─┐└───┘┌─┴─┐ │ \n",
+       "q3_2: ─────┤ X ├─────┤ X ├─■─\n",
+       "           └───┘     └───┘   </pre>"
+      ],
+      "text/plain": [
+       "                     ┌───┐   \n",
+       "q3_0: ────────────■──┤ H ├─■─\n",
+       "      ┌───┐     ┌─┴─┐└───┘ │ \n",
+       "q3_1: ┤ H ├──■──┤ X ├──■───┼─\n",
+       "      └───┘┌─┴─┐└───┘┌─┴─┐ │ \n",
+       "q3_2: ─────┤ X ├─────┤ X ├─■─\n",
+       "           └───┘     └───┘   "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import qiskit\n",
     "\n",
     "def hw4_1_response(circuit, outside_qubit, qubit_pair, bell_pair_start):\n",
     "    # Put your code here (spaces for indentation)\n",
+    "    circuit.h(qubit_pair[0])\n",
+    "    circuit.cx(qubit_pair[0], qubit_pair[1])\n",
+    "    circuit.cx(outside_qubit, qubit_pair[0])\n",
+    "    circuit.h(outside_qubit)\n",
+    "    circuit.cx(qubit_pair[0], qubit_pair[1])\n",
+    "    circuit.cz(outside_qubit, qubit_pair[1])\n",
     "    # End Code\n",
     "    return circuit\n",
-    "      "
+    "\n",
+    "reg = qiskit.QuantumRegister(3)\n",
+    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "hw4_1_response(circuit, reg[0], (reg[1], reg[2]), \"00\").draw()"
    ]
   },
   {
@@ -91,19 +127,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      \n",
+      "q4_0: \n",
+      "      \n",
+      "q4_1: \n",
+      "      \n",
+      "q4_2: \n",
+      "      \n",
+      "q4_3: \n",
+      "      \n",
+      "[[1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
+      "  0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def hw4_2_response(circuit, n, codes):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    matrix = np.identity(n+1)\n",
+    "    \n",
+    "    for code in codes:\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
     "    return circuit\n",
-    "      "
+    "\n",
+    "reg = qiskit.QuantumRegister(4)\n",
+    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "\n",
+    "codes = [\"0000\", \"0100\", \"1000\", \"1001\"]\n",
+    "print(hw4_2_response(circuit, 4, codes))\n",
+    "\n",
+    "def test(circuit):\n",
+    "    circuit.ccx(0,1,2)\n",
+    "\n",
+    "    op = qiskit.quantum_info.Operator(circuit)\n",
+    "    print(op.data)\n",
+    "\n",
+    "test(circuit)"
    ]
   },
   {
@@ -220,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
