first attempt for 2 and 3

--- a/week8/Lab8.ipynb
+++ b/week8/Lab8.ipynb
@@ -104,10 +104,10 @@
     "    # End Code\n",
     "    return circuit\n",
     "\n",
-    "reg = qiskit.QuantumRegister(3)\n",
-    "circuit = qiskit.QuantumCircuit(reg)\n",
+    "# reg = qiskit.QuantumRegister(3)\n",
+    "# circuit = qiskit.QuantumCircuit(reg)\n",
     "\n",
-    "hw4_1_response(circuit, reg[0], (reg[1], reg[2]), \"00\").draw()"
+    "# hw4_1_response(circuit, reg[0], (reg[1], reg[2]), \"00\").draw()"
    ]
   },
   {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "f11eca24-c641-4ff6-ae2c-4deef5c6e0b8",
    "metadata": {},
    "outputs": [
@@ -135,77 +135,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      \n",
-      "q4_0: \n",
-      "      \n",
-      "q4_1: \n",
-      "      \n",
-      "q4_2: \n",
-      "      \n",
-      "q4_3: \n",
-      "      \n",
-      "[[1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 0.+0.j 0.+0.j 0.+0.j 1.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j\n",
-      "  0.+0.j 1.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n"
+      "2\n",
+      "1\n",
+      "01\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "def to_bin(val):\n",
+    "    binstring = \"\"\n",
+    "\n",
+    "    while val != 0:\n",
+    "        if val % 2 == 1:\n",
+    "            binstring += \"1\"\n",
+    "        else:\n",
+    "            binstring += \"0\"\n",
+    "\n",
+    "        val //= 2\n",
+    "\n",
+    "    return binstring\n",
+    "\n",
     "def hw4_2_response(circuit, n, codes):\n",
     "    # Put your code to find the entangled qubits here\n",
-    "    matrix = np.identity(n+1)\n",
-    "    \n",
-    "    for code in codes:\n",
+    "    matrix = np.zeros(n+1)\n",
+    "    shit_right = True\n",
+    "\n",
+    "    for i in range(0, n+1):\n",
+    "        if (to_bin(i) in codes):\n",
+    "            if shift_right:\n",
+    "                matrix[i][i+1] = 1\n",
+    "                shift_right = False\n",
+    "            else:\n",
+    "                matrix[i][i-1] = 1\n",
+    "                shift_right = True\n",
+    "        else:\n",
+    "            matrix[i][i] = 1\n",
+    "\n",
+    "    my_gate = qiskit.UnitaryGate(matrix)\n",
+    "\n",
+    "    circuit.append(my_gate)\n",
     "\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
-    "    return circuit\n",
-    "\n",
-    "reg = qiskit.QuantumRegister(4)\n",
-    "circuit = qiskit.QuantumCircuit(reg)\n",
-    "\n",
-    "codes = [\"0000\", \"0100\", \"1000\", \"1001\"]\n",
-    "print(hw4_2_response(circuit, 4, codes))\n",
-    "\n",
-    "def test(circuit):\n",
-    "    circuit.ccx(0,1,2)\n",
-    "\n",
-    "    op = qiskit.quantum_info.Operator(circuit)\n",
-    "    print(op.data)\n",
-    "\n",
-    "test(circuit)"
+    "    return circuit"
    ]
   },
   {
@@ -224,18 +199,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f929240c-69cf-464a-88db-37ca1efdb087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-33-39f4a5fe6ae3>:10: DeprecationWarning: Back-references to from Bit instances to their containing Registers have been deprecated. Instead, inspect Registers to find their contained Bits.\n",
+      "  control = gate[1][0].index\n",
+      "<ipython-input-33-39f4a5fe6ae3>:11: DeprecationWarning: Back-references to from Bit instances to their containing Registers have been deprecated. Instead, inspect Registers to find their contained Bits.\n",
+      "  target = gate[1][1].index\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'101x'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import qiskit\n",
+    "\n",
     "def hw4_3_response(circuit):\n",
     "    # Put your code to find the entangled qubits here\n",
+    "    bitstring = \"0\" * circuit.num_qubits\n",
+    "    bitlist = list(bitstring)\n",
     "\n",
+    "    for gate in circuit:\n",
+    "        if gate[0].name == 'cx':\n",
+    "            control = gate[1][0].index\n",
+    "            target = gate[1][1].index\n",
+    "\n",
+    "            bitlist[control] = \"1\"\n",
+    "            bitlist[target] = \"x\"\n",
     "    # Put your code here (spaces for indentation)\n",
     "    # End Code\n",
     "\n",
-    "    return bitstring"
+    "    return \"\".join(bitlist)"
    ]
   },
   {
@@ -278,10 +285,11 @@
    "outputs": [],
    "source": [
     "def decompose_circuit(circuit):\n",
-    "    return decomposed_circuit\n",
+    "    # return decomposed_circuit\n",
+    "    return circuit\n",
     "\n",
     "def hw4_4_response(original_circuit, reg, connection_graph_nx, connection_graph_dictionary):\n",
-    "    new_c = qiskit.QuantumCircuit(new_reg)\n",
+    "    new_c = qiskit.QuantumCircuit(reg)\n",
     "    # Put your code here\n",
     "    # End Code\n",
     "\n",
@@ -322,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
