changed dtype of the matrix

--- a/week8/Lab8.ipynb
+++ b/week8/Lab8.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "def hw4_2_response(circuit, n, codes):\n",
     "    # Put your code to find the entangled qubits here\n",
-    "    matrix = np.zeros(n+1)\n",
+    "    matrix = np.zeros(n+1, dtype=np.int8)\n",
     "    shit_right = True\n",
     "\n",
     "    for i in range(0, n+1):\n",
