--- a/week8/Lab8.ipynb
+++ b/week8/Lab8.ipynb
@@ -149,19 +149,20 @@
     "\n",
     "def hw4_2_response(circuit, n, codes):\n",
     "    # Put your code to find the entangled qubits here\n",
-    "    matrix = np.zeros(n+1, dtype=np.int8)\n",
+    "    #UPDATE\n",
+    "    matrix = np.zeros((n+1, n+1), dtype=np.int8)\n",
     "    shit_right = True\n",
     "\n",
     "    for i in range(0, n+1):\n",
     "        if (to_bin(i) in codes):\n",
     "            if shift_right:\n",
-    "                matrix[i][i+1] = 1\n",
+    "                matrix[i, i+1] = 1\n",
     "                shift_right = False\n",
     "            else:\n",
-    "                matrix[i][i-1] = 1\n",
+    "                matrix[i, i-1] = 1\n",
     "                shift_right = True\n",
     "        else:\n",
-    "            matrix[i][i] = 1\n",
+    "            matrix[i, i] = 1\n",
     "\n",
     "    my_gate = qiskit.UnitaryGate(matrix)\n",
     "\n",
